fix: use existing spacing tokens

--- a/src/pages/public/PublicPages.module.scss
+++ b/src/pages/public/PublicPages.module.scss
@@ -119,7 +119,7 @@
 }
 
 .resourceSection {
-  margin-bottom: $spacing-4xl;
+  margin-bottom: $spacing-3xl;
 
   h2 {
     color: $primary-color;
@@ -137,7 +137,7 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: $spacing-xl;
-  margin-bottom: $spacing-4xl;
+  margin-bottom: $spacing-3xl;
 
   @include tablet {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -235,7 +235,7 @@
 }
 
 .calloutSection {
-  margin-top: $spacing-4xl;
+  margin-top: $spacing-3xl;
 }
 
 .calloutCard {
